@startuml CD-1: Iteration 1 — Backend Class Diagram
title Iteration 1 — Backend (Spring Boot) Class Structure

skinparam classAttributeIconSize 0
skinparam class {
    BackgroundColor White
    BorderColor Black
    ArrowColor Black
}
skinparam linetype ortho

' ─────────────────────────────────────────
' ENTITIES
' ─────────────────────────────────────────

class User <<entity>> {
    -id: Long
    -username: String
    -email: String
    -password: String
    -role: UserRole
    -billingAddress: String
    -failedLoginAttempts: int
    -lockedUntil: LocalDateTime
    +isLocked(): boolean
}

abstract class Product <<entity>> {
    -id: Long
    -name: String
    -price: BigDecimal
    -stockQty: int
    -imageUrl: String
}

class Wheel <<entity>> {
    -maxLoad: int
    -material: String
    -size: String
}

class Bearing <<entity>> {
    -diameter: String
    -material: String
    -size: String
}

enum UserRole <<entity>> {
    ADMIN
    DEFAULT
}

' ─────────────────────────────────────────
' DTOs
' ─────────────────────────────────────────

class LoginRequest <<entity>> {
    +username: String
    +password: String
}

class LoginResponse <<entity>> {
    +token: String
    +role: UserRole
    +username: String
}

class ProductDTO <<entity>> {
    +id: Long
    +name: String
    +price: BigDecimal
    +stockQty: int
    +imageUrl: String
    +type: String
    +maxLoad: Integer
    +material: String
    +size: String
    +diameter: String
    +bearingMaterial: String
    +bearingSize: String
}

class ProductFilterRequest <<entity>> {
    +name: String
    +type: String
    +size: String
    +material: String
    +maxLoad: Integer
    +diameter: String
}

' ─────────────────────────────────────────
' REPOSITORIES (boundary)
' ─────────────────────────────────────────

class UserRepository <<boundary>> {
    +findByUsername(username: String): Optional<User>
    +save(user: User): User
    +findById(id: Long): Optional<User>
}

class ProductRepository <<boundary>> {
    +findAll(): List<Product>
    +findAll(spec: Specification<Product>): List<Product>
    +findById(id: Long): Optional<Product>
}

' ─────────────────────────────────────────
' SECURITY (boundary)
' ─────────────────────────────────────────

class JwtTokenProvider <<boundary>> {
    -key: SecretKey
    -expirationMs: long
    +generateToken(userDetails: UserDetails): String
    +extractUsername(token: String): String
    +validateToken(token: String, ud: UserDetails): boolean
}

class JwtAuthFilter <<boundary>> {
    +doFilterInternal(req, res, chain): void
    -extractToken(req: HttpServletRequest): String
}

class SecurityConfig <<boundary>> {
    +securityFilterChain(http: HttpSecurity): SecurityFilterChain
    +userDetailsService(): UserDetailsService
    +passwordEncoder(): PasswordEncoder
    +corsConfigurationSource(): CorsConfigurationSource
}

' ─────────────────────────────────────────
' CONTROLLERS (boundary)
' ─────────────────────────────────────────

class AuthController <<boundary>> {
    +login(request: LoginRequest): ResponseEntity<LoginResponse>
    +logout(): ResponseEntity<Void>
}

class ProductController <<boundary>> {
    +getProducts(name, type, size, material,\n  maxLoad, diameter): ResponseEntity<List<ProductDTO>>
}

' ─────────────────────────────────────────
' SERVICES (control)
' ─────────────────────────────────────────

class AuthService <<control>> {
    +AuthService(userRepo, encoder, jwtProvider)
    +authenticate(request: LoginRequest): LoginResponse
    -handleFailedLogin(user: User): void
}

class ProductService <<control>> {
    +ProductService(productRepo: ProductRepository)
    +getAllProducts(): List<ProductDTO>
    +getFilteredProducts(filter: ProductFilterRequest): List<ProductDTO>
    -buildSpecification(filter): Specification<Product>
    -toDTO(product: Product): ProductDTO
}

' ─────────────────────────────────────────
' INHERITANCE
' ─────────────────────────────────────────

Product <|-- Wheel
Product <|-- Bearing
User "1" --> "1" UserRole

' ─────────────────────────────────────────
' CONTROLLER → SERVICE dependencies
' ─────────────────────────────────────────

AuthController ..> AuthService : uses
ProductController ..> ProductService : uses
AuthController ..> LoginRequest : <<uses>>
AuthController ..> LoginResponse : <<creates>>
ProductController ..> ProductFilterRequest : <<uses>>
ProductController ..> ProductDTO : <<returns>>

' ─────────────────────────────────────────
' SERVICE → REPOSITORY associations
' ─────────────────────────────────────────

AuthService "1" --> "1" UserRepository : -ur
AuthService "1" --> "1" JwtTokenProvider : -jwtProvider
AuthService ..> LoginRequest : reads
AuthService ..> LoginResponse : <<creates>>

ProductService "1" --> "1" ProductRepository : -pr
ProductService ..> ProductDTO : <<creates>>
ProductService ..> ProductFilterRequest : reads

' ─────────────────────────────────────────
' REPOSITORY → ENTITY associations
' ─────────────────────────────────────────

UserRepository ..> User : manages
ProductRepository ..> Product : manages

' ─────────────────────────────────────────
' SECURITY wiring
' ─────────────────────────────────────────

SecurityConfig ..> JwtAuthFilter : registers
SecurityConfig ..> UserRepository : uses
JwtAuthFilter "1" --> "1" JwtTokenProvider : -jwtTokenProvider

@enduml
